crates/bevy_macros_compile_fail_tests/tests/deref_mut_derive/invalid_item.fail.rs
use bevy_derive::DerefMut;

#[derive(DerefMut)]
struct UnitStruct;

#[derive(DerefMut)]
enum Enum {}

fn main() {}
